--- a/index.html
+++ b/index.html
@@ -22,223 +22,47 @@
 
 <body>
 
+    <body>
 
-    <div class="hero-image">
-        <div class="hero-text">
-            <h1>Yoga Trivia</h1>
-            <h2> Let's test your knowledge of the ancient practice</h2>
+
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Yoga Trivia</h1>
+                <h2> Let's test your knowledge of the ancient practice</h2>
+            </div>
+
         </div>
 
-    </div>
-
-    <div class="start">
-        <div class="row">
-            <div class="col-md-12">
-                <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to Start</button>
-            </div>
-        </div>
-    </div>
-
-
-
-
-    <!-- Game Questions Start Here  -->
-    <div class="game">
-        <div class="row">
-            <div class="col-md-12">
-                <h2 id="timer">
-                    </h1>
-            </div>
-        </div>
-        <!-- Question 1  -->
-        <div class="questions">
+        <div class="start">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 id="question">The word "yoga" is derived from a Sanskrit word that means "union".</h3>
-                </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-
-                        <input type="radio" id="true1" name="choice1" value="trueA">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false1" name="choice1" value="falseA">
-                        <label for="false">False</label><br>
+                    <div class="game">
+                        <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
+                            Start</button>
                     </div>
                 </div>
             </div>
 
 
-            <!-- Question 2  -->
+
+
+            <!-- Timer 
             <div class="row">
                 <div class="col-md-12">
-                    <h3 id="question">Yoga originates from Thailand.</h3>
+                    <h2 id="timer">
+                    </h2>
                 </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-                        <input type="radio" id="true2" name="choice2" value="trueB">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false2" name="choice2" value="falseB">
-                        <label for="false">False</label><br>
-                    </div>
-                </div>
-            </div>
+            </div> -->
 
 
 
-            <!-- Question 3  -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 id="question">There are 26 postures in the Bikram Yoga series.</h3>
-                </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-                        <input type="radio" id="true3" name="choice3" value="true">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false3" name="choice3" value="false">
-                        <label for="false">False</label><br>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- Question 4  -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 id="question">The 5th chakra signifies the process of enlightenment.</h3>
-                </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-                        <input type="radio" id="true4" name="choice4" value="true">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false4" name="choice4" value="false">
-                        <label for="false">False</label><br>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- Question 5  -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 id="question">The Yamas represent moral and ethical rules.</h3>
-                </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-                        <input type="radio" id="true5" name="choice5" value="true">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false5" name="choice5" value="false">
-                        <label for="false">False</label><br>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 6  -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 id="question">Pranayama refers to how far the spine will bend.</h3>
-                </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-                        <input type="radio" id="true6" name="choice6" value="true">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false6" name="choice6" value="false">
-                        <label for="false">False</label><br>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 7 -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 id="question">There are eight limbs in the practice of Ashtanga yoga.</h3>
-                </div>
-            </div>
-            <!-- Buttons  -->
-            <div class="buttons">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <!-- True Button  -->
-                        <input type="radio" id="true7" name="choice7" value="true">
-                        <label for="true">True</label><br>
-                    </div>
-                    <!-- False Button  -->
-                    <div class="col-sm-6">
-                        <input type="radio" id="false7" name="choice7" value="false">
-                        <label for="false">False</label><br>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- close game container  -->
-        <!-- </div> -->
-
-        <div class="done">
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="button" class="btn btn-secondary btn-lg btn-block doneBtn">Done</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
-    <div class="start">
-        <div class="scoreInfo">
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>All Done!</h4>
-                    <br>
-                    <div class="correct">Correct: 0</div>
-                    <div class="incorrect">Incorrect: 0</div>
-                </div>
-            </div>
-        </div>
 
-        <script type="text/javascript" src="assets/javascript/app.js"></script>
-</body>
+
+
+            <script type="text/javascript" src="assets/javascript/app.js"></script>
+    </body>
 
 </html>
